[package]

name = "playform"
version = "0.0.0"
authors = [
  "Zeke Foppa <benjamin.foppa@gmail.com>",
  "Clark Gaebel <cg.wowus.cg@gmail.com>",
  "Elijah Andrews <elijahcandrews@gmail.com>",
]

[[bin]]
name = "playform"
path = "src/mod.rs"

[features]
default = []
dummy-client = ["dummy-client-lib"]

[dependencies]
env_logger= "*"
log = "*"
nanomsg = "*"
thread-scoped = "*"
time = "*"

[dependencies.client-lib]
path = "client/lib"

[dependencies.dummy-client-lib]
path     = "client/dummy"
optional = true

[dependencies.server-lib]
path = "server/lib"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"

[patch.'https://github.com/bfops/rust-voxel-data']
voxel-data = { git = "https://github.com/bjorn3/rust-voxel-data", branch = "no_nightly_rustc" }

[patch.'https://github.com/bfops/stopwatch-rs']
stopwatch = { git = "https://github.com/bjorn3/stopwatch-rs", branch = "no_nightly_rustc" }

[patch.'https://github.com/bfops/rust-isosurface-extraction']
isosurface-extraction = { git = "https://github.com/bjorn3/rust-isosurface-extraction", branch = "no_nightly_rustc" }

[patch.'https://github.com/bfops/yaglw']
yaglw = { git = "https://github.com/bjorn3/yaglw", branch = "no_nightly_rustc" }
