[package]
name = "playform"
version = "0.0.0"
authors = [
  "Zeke Foppa <benjamin.foppa@gmail.com>",
  "Clark Gaebel <cg.wowus.cg@gmail.com>",
  "Elijah Andrews <elijahcandrews@gmail.com>",
]

[workspace]
members = ["benchmarks", "client/bin", "client/dummy", "client/lib", "common", "server/bin", "server/lib", "server/lib/terrain"]

[[bin]]
name = "playform"
path = "src/mod.rs"

[features]
default = ["audio"]
dummy-client = ["dummy-client-lib"]
audio = ["client-lib/audio"]

[dependencies]
env_logger= "*"
log = "*"
nanomsg = "*"
thread-scoped = "*"
time = "*"

[dependencies.client-lib]
path = "client/lib"
default-features = false

[dependencies.dummy-client-lib]
path     = "client/dummy"
optional = true

[dependencies.server-lib]
path = "server/lib"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"
