[package]
name = "benchmarks"
version = "0.0.0"
authors = []

[[bin]]
name = "generate-terrain-throughput"
path = "./generate_terrain_throughput.rs"

[dependencies]
cgmath     = "0.15"
collision  = "0.13"
env_logger = "*"
num        = "*"
log        = "*"
time       = "*"

[dependencies.playform-common]
path = "../common"

[dependencies.client-lib]
path = "../client/lib"

[dependencies.server-lib]
path = "../server/lib"
