[package]

name = "playform-client"
version = "0.0.0"
authors = [
  "Ben Foppa <benjamin.foppa@gmail.com>",
  "Clark Gaebel <cg.wowus.cg@gmail.com>",
  "Elijah Andrews <elijahcandrews@gmail.com>",
]

[[bin]]
name = "client"
path = "src/mod.rs"

[dependencies]
env_logger= "*"
libc = "*"
log = "*"
num = "*"
time = "*"

[dependencies.playform-common]
path = "../common"
version = "*"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.sdl2-sys]
git = "https://github.com/AngryLawyer/rust-sdl2"

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2"

[dependencies.yaglw]
git = "https://github.com/bfops/yaglw"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"
