[package]

name = "playform-common"
version = "0.0.0"
authors = [
  "Ben Foppa <benjamin.foppa@gmail.com>",
  "Clark Gaebel <cg.wowus.cg@gmail.com>",
  "Elijah Andrews <elijahcandrews@gmail.com>",
]

[lib]
name = "common"
path = "mod.rs"

[dependencies]
cgmath = "0.3.1"
clippy = "*"
log = "*"
nanomsg = "*"
num = "*"
rustc-serialize = "*"
time = "*"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"

[dependencies.voxel-data]
git = "https://github.com/bfops/rust-voxel-data"

[dependencies.isosurface-extraction]
git = "https://github.com/bfops/rust-isosurface-extraction"
rev = "011313c5e8b7eb0c40669fcca382942d71f64757"
