[package]

name = "playform-common"
version = "0.0.0"
authors = [
  "Zeke Foppa <benjamin.foppa@gmail.com>",
  "Clark Gaebel <cg.wowus.cg@gmail.com>",
  "Elijah Andrews <elijahcandrews@gmail.com>",
]

[lib]
name = "common"
path = "mod.rs"

[dependencies]
cgmath         = { version = "0.15", features = ["serde"] }
collision      = { version = "0.13", features = ["eders"] }
fnv            = "*"
log            = "*"
nanomsg        = "*"
num            = "*"
serde          = "1.0"
serde_derive   = "1.0"
time           = "*"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"

[dependencies.voxel-data]
git = "https://github.com/bfops/rust-voxel-data"

[dependencies.isosurface-extraction]
git = "https://github.com/bfops/rust-isosurface-extraction"
