[package]

name = "playform-device"
version = "0.0.0"
authors = [
    "Ben Foppa <benjamin.foppa@gmail.com>",
    "Clark Gaebel <cg.wowus.cg@gmail.com>",
    "Elijah Andrews <elijahcandrews@gmail.com>",
  ]

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false

[dependencies]
env_logger = "*"
log = "*"

[[bin]]
name = "device"
path = "./src/mod.rs"

[dependencies.playform-common]
path = "../common"
version = "*"

[dependencies.nanomsg]
git = "https://github.com/thehydroimpulse/nanomsg.rs"
