[package]

name = "playform-server"
version = "0.0.0"
authors = []

[[bin]]
name = "server"
path = "./src/mod.rs"

[dependencies]
env_logger= "*"
log = "*"
num = "*"
rand = "*"
time = "*"

[dependencies.playform-common]
path = "../common"
version = "*"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.noise]
git = "https://github.com/bjz/noise-rs"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"
