[package]

name = "playform-server"
version = "0.0.0"
authors = []

[[bin]]
name = "server"
path = "./src/mod.rs"

[dependencies]
bincode = "*"
clippy = "*"
env_logger= "*"
log = "*"
num = "*"
rand = "*"
rustc-serialize = "*"
thread-scoped = "*"
time = "*"

[dependencies.playform-common]
path = "../common"
version = "*"

[dependencies.voxel-data]
git = "https://github.com/bfops/rust-voxel-data"

[dependencies.terrain]
path = "./terrain"
version = "*"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.nanomsg]
git = "https://github.com/thehydroimpulse/nanomsg.rs"

[dependencies.noise]
git = "https://github.com/bjz/noise-rs"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"
