[package]

name = "dummy-client-lib"
version = "0.0.0"
authors = []

[lib]
name = "dummy_client_lib"
path = "./mod.rs"

[dependencies]
cgmath        = "0.14.*"
log           = "*"
thread-scoped = "*"
time          = "*"

[dependencies.client-lib]
path = "../lib"

[dependencies.playform-common]
path = "../../common"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"

[replace]
"collision:0.10.0" = { git = "https://github.com/bfops/collision-rs-1" }
