[package]

name = "dummy-client-lib"
version = "0.0.0"
authors = []

[lib]
name = "dummy_client_lib"
path = "./mod.rs"

[dependencies]
cgmath        = "0.14.*"
log           = "*"
thread-scoped = "*"
time          = "*"

[dependencies.client-lib]
path = "../lib"

[dependencies.playform-common]
path = "../../common"
