[package]

name = "client-lib"
version = "0.0.0"
authors = []

[lib]
name = "client_lib"
path = "src/mod.rs"

[dependencies]
bincode = "*"
cgmath = "0.3.*"
clippy = "*"
libc = "*"
log = "*"
num = "*"
rustc-serialize = "*"
thread-scoped = "*"
time = "*"

[dependencies.playform-common]
path = "../../common"
version = "*"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.sdl2-sys]
git = "https://github.com/AngryLawyer/rust-sdl2"

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2"

[dependencies.yaglw]
git = "https://github.com/bfops/yaglw"

[dependencies.voxel-data]
git = "https://github.com/bfops/rust-voxel-data"

[dependencies.isosurface-extraction]
git = "https://github.com/bfops/rust-isosurface-extraction"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"
