[package]

name = "client-lib"
version = "0.0.0"
authors = []

[lib]
name = "client_lib"
path = "src/mod.rs"

[dependencies]
bincode = "*"
cgmath = "0.3.*"
clippy = "*"
gl = "0.5.*"
libc = "0.1.*"
log = "*"
num = "*"
rustc-serialize = "*"
sdl2 = "0.9.*"
sdl2-sys = "0.6.*"
thread-scoped = "*"
time = "*"

[dependencies.playform-common]
path = "../../common"
version = "*"

[dependencies.yaglw]
git = "https://github.com/bfops/yaglw"

[dependencies.voxel-data]
git = "https://github.com/bfops/rust-voxel-data"

[dependencies.isosurface-extraction]
git = "https://github.com/bfops/rust-isosurface-extraction"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"
