[package]

name = "client-lib"
version = "0.0.0"
authors = []

[lib]
name = "client_lib"
path = "src/mod.rs"

[dependencies]
bincode        = "*"
cgmath         = "0.14.*"
collision      = "0.10.*"
fnv            = "*"
gl             = "0.5.*"
hound          = "*"
libc           = "*"
log            = "*"
num            = "*"
portaudio      = "*"
rand           = "*"
sdl2           = "0.30.*"
sdl2-sys       = "0.30.*"
thread-scoped  = "*"
time           = "*"

[dependencies.image]
version = "*"
default-features = false
features = ["png_codec"]

[dependencies.playform-common]
path = "../../common"
version = "*"

[dependencies.yaglw]
git = "https://github.com/bfops/yaglw"

[dependencies.voxel-data]
git = "https://github.com/bfops/rust-voxel-data"

[dependencies.isosurface-extraction]
git = "https://github.com/bfops/rust-isosurface-extraction"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"
