[package]

name = "server-lib"
version = "0.0.0"
authors = []

[lib]
name = "server_lib"
path = "./src/mod.rs"

[dependencies]
bincode = "*"
cgmath = "0.3.1"
clippy = "*"
log = "*"
nanomsg = "*"
num = "*"
rand = "*"
rustc-serialize = "*"
thread-scoped = "*"
time = "*"

[dependencies.playform-common]
path = "../../common"
version = "*"

[dependencies.voxel-data]
git = "https://github.com/bfops/rust-voxel-data"

[dependencies.terrain]
path = "./terrain"
version = "*"

[dependencies.noise]
git = "https://github.com/bjz/noise-rs"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"
