[package]

name = "server-lib"
version = "0.0.0"
authors = []

[lib]
name = "server_lib"
path = "./src/mod.rs"

[dependencies]
bincode        = "*"
cgmath         = "0.14.*"
collision      = "0.10.*"
log            = "*"
nanomsg        = "*"
num            = "*"
rand           = "*"
thread-scoped  = "*"
time           = "*"

[dependencies.playform-common]
path = "../../common"
version = "*"

[dependencies.voxel-data]
git = "https://github.com/bfops/rust-voxel-data"

[dependencies.terrain]
path = "./terrain"
version = "*"
