[package]
name = "terrain"
version = "0.0.0"
authors = []

[lib]
name = "terrain"
path = "mod.rs"

[dependencies]
log = "*"
num = "*"

[dependencies.playform-common]
path = "../../common"
version = "*"

[dependencies.noise]
git = "https://github.com/bjz/noise-rs"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"
