[package]

name = "terrain"
version = "0.0.0"
authors = []

[lib]
name = "terrain"
path = "./src/mod.rs"

[dependencies]
clippy = "*"
log = "*"
rand = "*"
time = "*"

[dependencies.playform-common]
path = "../../common"
version = "*"

[dependencies.voxel]
path = "../voxel"
version = "*"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.noise]
git = "https://github.com/bjz/noise-rs"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"

