[package]

name = "terrain"
version = "0.0.0"
authors = []

[lib]
name = "terrain"
path = "mod.rs"

[dependencies]
clippy = "*"
log = "*"
rand = "*"
time = "*"

[dependencies.playform-common]
path = "../../common"
version = "*"

[dependencies.voxel-data]
git = "https://github.com/bfops/rust-voxel-data"

[dependencies.isosurface-extraction]
git = "https://github.com/bfops/rust-isosurface-extraction"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.noise]
git = "https://github.com/bjz/noise-rs"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"

