[package]

name = "terrain"
version = "0.0.0"
authors = []

[lib]
name = "terrain"
path = "mod.rs"

[dependencies]
cgmath = "0.3.*"
clippy = "*"
log = "*"
rand = "*"
time = "*"
noise = "0.1.5"
num = "*"

[dependencies.playform-common]
path = "../../../common"
version = "*"

[dependencies.voxel-data]
git = "https://github.com/bfops/rust-voxel-data"

[dependencies.isosurface-extraction]
git = "https://github.com/bfops/rust-isosurface-extraction"
rev = "011313c5e8b7eb0c40669fcca382942d71f64757"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"

