[package]

name = "terrain"
version = "0.0.0"
authors = []

[lib]
name = "terrain"
path = "mod.rs"

[dependencies]
cgmath    = "0.15"
collision = "0.13"
fnv       = "*"
log       = "*"
lru-cache = "*"
rand      = "*"
time      = "*"
noise     = "0.1.5"
num       = "*"

[dependencies.playform-common]
path = "../../../common"
version = "*"

[dependencies.voxel-data]
git = "https://github.com/bfops/rust-voxel-data"

[dependencies.stopwatch]
git = "https://github.com/bfops/stopwatch-rs"

